test: add layout for the application

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "serve:sites": "NX_TUI=true nx run-many --target=serve --projects=api,web,sites --parallel",
     "serve:test": "NX_TUI=false nx run-many --target=serve --projects=api,web --parallel -c test",
     "serve:sites:test": "NX_TUI=false nx run-many --target=serve --projects=api,web,sites --parallel -c test",
+    "serve:prod": "NX_TUI=false nx run-many --target=build --projects=api,web -c prod && NX_TUI=true nx run-many --target=serve --projects=api,web --parallel -c prod",
     "caddy": "caddy run --config scripts/caddy/Caddyfile",
     "e2e": "nx e2e-ui web-e2e -c test",
     "e2e:web": "nx serve web -c test",
