fix: build errors

--- a/apps/landing/tsconfig.json
+++ b/apps/landing/tsconfig.json
@@ -16,7 +16,7 @@
         "name": "next"
       }
     ],
-    "types": ["jest", "node", "styled-components"]
+    "types": ["jest", "node", "styled-components", "uniforms"]
   },
   "include": [
     "**/*.ts",
