refactor(infra): reorganize Packer configuration to modular structure
- Rename app-base to services-base for clarity
- Reorganize from builds/ to environments/ to match Terraform structure
- Make modules self-contained with local files/ and scripts/ directories
- Move install scripts to services-base module since only used there
- Remove obsolete build scripts (build-services.sh, check-rebuild.sh)
- Update CLI service to use new module paths and naming
- Simplify Consul configuration with minimal base + role-specific configs
- Create dedicated consul-server Packer configuration
- Keep shared scripts (get-latest-snapshot, cleanup) in common scripts/
- Fix CLI import: TaskService -> TasksService

--- a/apps/cli/project.json
+++ b/apps/cli/project.json
@@ -44,6 +44,22 @@
     },
     "test": {
       "executor": "@nx/jest:jest"
+    },
+    "run": {
+      "executor": "@nx/js:node",
+      "defaultConfiguration": "prod",
+      "options": {
+        "buildTarget": "cli:build",
+        "watch": false
+      },
+      "configurations": {
+        "dev": {
+          "buildTarget": "cli:build:dev"
+        },
+        "prod": {
+          "buildTarget": "cli:build:prod"
+        }
+      }
     }
   }
 }
