refactor(libs-backend-infra): migrate Consul encryption key from runtime to build-time configuration
- Move encryption key from Terraform user_data to Packer build process
- Create prod-packer workspace in Terraform Cloud for build secrets
- Add file provisioner to bake encryption.hcl into Packer images
- Remove consul_encryption_key from all Terraform module interfaces
- Add firewall rule for Terraform Cloud access to Consul
- Refactor PackerService CLI to fetch secrets from prod-packer workspace
- Simplify middleware with reusable functions and proper chaining
- Remove unused force, debug, and varFile options from Packer commands
- Add --prefer-offline to all npx commands in .mcp.json.example

BREAKING: Requires CONSUL_ENCRYPT_KEY to be set in prod-packer workspace

--- a/infra/packer/modules/services-base/files/consul.service
+++ b/infra/packer/modules/services-base/files/consul.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=Consul
 Documentation=https://www.consul.io/
-Requires=network-online.target consul-config.service
-After=network-online.target consul-config.service
+Requires=network-online.target
+After=network-online.target
 ConditionFileNotEmpty=/etc/consul.d/consul-base.hcl
 
 [Service]
-Type=notify
+Type=simple
 User=consul
 Group=consul
 
