refactor(libs-backend-infra): implement Consul cloud auto-join and fix TF Cloud config
- Add consul-server tag to enable DigitalOcean cloud auto-join discovery
- Update Consul clients to use provider=digitalocean with API token
- Fix Consul provider for Terraform Cloud using actual server IP
- Remove legacy consul_server_ip variable passing between modules
- Consolidate all Consul configuration into module-consul.tf
- Implement two-stage Terraform apply in CLI for bootstrap
- Remove user_data scripts in favor of Packer configurations
- Standardize on DIGITALOCEAN_API_TOKEN variable naming
- Clean up unused template files and symlinks

--- a/infra/packer/modules/services-base/files/docker-login.service
+++ b/infra/packer/modules/services-base/files/docker-login.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Login to DigitalOcean Docker Registry
-After=network-online.target docker.service consul.service
+After=network-online.target docker.service docker-daemon-config.service docker-loki-plugin.service
 Before=consul-template.service
 Wants=network-online.target
 
@@ -8,14 +8,8 @@ Wants=network-online.target
 Type=oneshot
 RemainAfterExit=yes
 
-# Get token from Consul KV (populated during initial setup)
-ExecStartPre=/bin/bash -c 'consul kv get config/digitalocean/token > /tmp/do-token 2>/dev/null || true'
-
-# Configure doctl with token from Consul
-ExecStartPre=/bin/bash -c 'if [ -s /tmp/do-token ]; then mkdir -p /root/.config/doctl && echo "access-token: $(cat /tmp/do-token)" > /root/.config/doctl/config.yaml; fi'
-
-# Login to Docker registry
-ExecStart=/bin/bash -c 'if [ -s /tmp/do-token ]; then /usr/local/bin/doctl registry login; else echo "No token in Consul KV, skipping registry login"; fi'
+# Login to Docker registry using the pre-configured doctl
+ExecStart=/usr/local/bin/doctl registry login
 
 StandardOutput=journal
 StandardError=journal
