--- a/.circleci/config/jobs/docker-web.yml
+++ b/.circleci/config/jobs/docker-web.yml
@@ -10,11 +10,7 @@ steps:
     # This step ensures that Docker commands run in this job will execute on a remote Docker engine.
   - setup_remote_docker:
       docker_layer_caching: true
-  # https://discuss.circleci.com/t/pass-env-vars-to-docker-containers-in-circle-2-0/17827/2
-  # https://github.com/moby/moby/issues/1996#issuecomment-1763467972
+  # Use Makefile for building and pushing Docker images
   - run:
-      name: 'Build web Docker image'
-      command: (./scripts/docker/prod/build-web.sh)
-  - run:
-      name: 'Push Docker Image'
-      command: docker compose --verbose -f .docker/prod/build.docker-compose.yaml push web
+      name: 'Build and Push Web Docker Image'
+      command: docker buildx bake --file .docker/docker-bake.hcl --push web
