--- a/.circleci/config/jobs/docker-landing.yml
+++ b/.circleci/config/jobs/docker-landing.yml
@@ -10,10 +10,7 @@ steps:
     # This step ensures that Docker commands run in this job will execute on a remote Docker engine.
   - setup_remote_docker:
       docker_layer_caching: true
-  # https://discuss.circleci.com/t/pass-env-vars-to-docker-containers-in-circle-2-0/17827/2
+  # Use Makefile for building and pushing Docker images
   - run:
-      name: 'Build landing Docker image'
-      command: (./scripts/docker/prod/build-landing.sh)
-  - run:
-      name: 'Push Docker Image'
-      command: docker compose --verbose -f .docker/prod/build.docker-compose.yaml push landing
+      name: 'Build and Push Landing Docker Image'
+      command: docker buildx bake --file .docker/docker-bake.hcl --push landing
