chore: update config

--- a/.circleci/config/jobs/setup-infra-workspace.yml
+++ b/.circleci/config/jobs/setup-infra-workspace.yml
@@ -4,6 +4,8 @@ steps:
   - checkout
   - setup-env
   - install-nvm
+  - install-pnpm
+  - install-packages
   - install-terraform
   - login-docker
 
