--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -590,6 +590,8 @@ jobs:
       - checkout
       - setup-env
       - install-nvm
+      - install-pnpm
+      - install-packages
       - install-terraform
       - login-docker
       - persist_to_workspace:
