--- a/.circleci/config/jobs/packer-image.yml
+++ b/.circleci/config/jobs/packer-image.yml
@@ -1,5 +1,5 @@
 executor: docker-node
-resource_class: medium
+resource_class: arm.medium
 steps:
   - restore-workspace
     # This step ensures that Docker commands run in this job will execute on a remote Docker engine.
