--- a/.circleci/config/jobs/setup-infra-workspace.yml
+++ b/.circleci/config/jobs/setup-infra-workspace.yml
@@ -1,5 +1,5 @@
 executor: docker-node
-resource_class: large
+resource_class: arm.large
 steps:
   - checkout
   - setup-env
@@ -7,6 +7,7 @@ steps:
   - install-pnpm
   - install-packages
   - install-terraform
+  - install-doctl
   - login-docker
 
   - persist_to_workspace:
