--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -306,10 +306,10 @@ commands:
 executors:
   docker-node:
     docker:
-      - image: node:22-slim
+      - image: node:22
   docker-node-neo4j:
     docker:
-      - image: node:22-slim
+      - image: node:22
       - environment:
           NEO4J_ACCEPT_LICENSE_AGREEMENT: 'yes'
           NEO4J_AUTH: neo4j/password
