--- a/.circleci/config/executors/docker-node-neo4j.yml
+++ b/.circleci/config/executors/docker-node-neo4j.yml
@@ -1,7 +1,7 @@
 # Docker containers work on a merged networking stack, the second container should make it available in localhost
 # https://discuss.circleci.com/t/whats-the-docker-hostname-for-the-second-container/20101
 docker:
-  - image: node:22-slim
+  - image: node:22
     # https://circleci.com/docs/configuration-reference/#docker
     # name: 127.0.0.1
   # https://circleci.com/docs/using-docker#using-multiple-docker-images
