--- a/.circleci/config/commands/install-packer.yml
+++ b/.circleci/config/commands/install-packer.yml
@@ -5,8 +5,8 @@ steps:
       command: |
         set -x
 
-        curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+        curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
 
-        sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+        apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
 
-        sudo apt-get update && sudo apt-get install packer
+        apt-get update && apt-get install -y packer
