--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "@nestjs/graphql": "13.0.2",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.7",
-    "@nestjs/platform-socket.io": "^11.0.11",
+    "@nestjs/platform-socket.io": "11.0.11",
     "@nestjs/swagger": "11.0.3",
     "@nestjs/websockets": "^11.0.11",
     "@next/bundle-analyzer": "15.2.4",
