chore: update generated circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,6 +83,17 @@ commands:
     steps:
       - run:
           command: |
+            # Install Java 21 from Adoptium (Eclipse Temurin)
+            apt-get update
+            apt-get install -y wget apt-transport-https
+
+            # Add Adoptium repository for Java 21
+            wget -qO - https://packages.adoptium.net/artifactory/api/gpg/key/public | gpg --dearmor -o /etc/apt/keyrings/adoptium.gpg
+            echo "deb [signed-by=/etc/apt/keyrings/adoptium.gpg] https://packages.adoptium.net/artifactory/deb $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/adoptium.list
+
+            apt-get update
+            apt-get install -y temurin-21-jre
+
             # https://neo4j.com/docs/operations-manual/current/installation/linux/debian/
             wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg
 
@@ -466,7 +477,7 @@ jobs:
       - restore-workspace-database
       - setup-neo4j
       - run:
-          command: pnpm cli tasks int --stage ci
+          command: pnpm cli tasks int --stage ci --stream
           environment:
             JEST_JUNIT_OUTPUT_DIR: ./tmp/reports/test-integration
           name: Run Integration Tests
@@ -488,7 +499,7 @@ jobs:
     steps:
       - restore-workspace
       - run:
-          command: pnpm cli tasks lint --stage ci
+          command: pnpm cli tasks lint --stage ci --stream
           name: Run Lint on Repository
       - store_test_results:
           path: ./tmp/reports/lint
@@ -696,7 +707,7 @@ jobs:
     steps:
       - restore-workspace
       - run:
-          command: pnpm cli tasks unit --stage ci
+          command: pnpm cli tasks unit --stage ci --stream
           environment:
             JEST_JUNIT_OUTPUT_DIR: ./tmp/reports/test-unit
           name: Run Unit Tests
