fix: restore setup_remote_docker for Docker command access in e2e tests
- Added back setup_remote_docker that was removed in d560e2478a
- Kept Docker log capture steps for Neo4j container logs
- Docker commands need setup_remote_docker to access daemon from within container executor

--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -13,6 +13,10 @@ environment:
 
 parallelism: 4
 steps:
+  # All Docker commands execute locally on the same virtual machine that used to spin up the primary container.
+  # Needed for sidecars to interact with each other
+  - setup_remote_docker:
+      version: default
   - restore-workspace-database
   - setup-neo4j
   # We use workspace so it has the latest build
@@ -60,6 +64,7 @@ steps:
   #     command: |
   #       pnpm playwright merge-reports --reporter html ~/project/tmp/reports/e2e/all-blob-reports
   #     when: always
+  # Not installed with `node:22`
   - run:
       name: Install Docker CLI
       command: |
