--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -432,6 +432,8 @@ jobs:
         type: string
     resource_class: << parameters.resource_class >>
     steps:
+      - setup_remote_docker:
+          version: default
       - restore-workspace-database
       - setup-neo4j
       - run: pnpm npx playwright install-deps
